--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ imageio~=2.36.1
 lacss~=0.14.3
 matplotlib~=3.9.2
 napari~=0.5.5
+napari_animation~=0.0.8
 numpy~=1.26.4
 opencv-python~=4.10.0.84
 pandas~=2.2.3
