--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,11 @@ matplotlib~=3.9.2
 napari~=0.5.5
 napari_animation~=0.0.8
 numpy~=1.26.4
-opencv-python~=4.10.0.84
+opencv-python
 pandas~=2.2.3
 pillow~=10.4.0
 prettytable~=3.12.0
-pyqt5~=5.15.11
+pyqt5
 requests~=2.32.3
 scikit-image~=0.24.0
 scipy~=1.14.1
