--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,14 @@
-MedPy~=0.5.2
-PyYAML~=6.0.2
-cachetools~=5.5.0
-cellpose~=3.1.0
-csbdeep~=0.8.1
-imageio~=2.36.1
-lacss~=0.14.3
-matplotlib~=3.9.2
-napari~=0.5.5
-napari_animation~=0.0.8
-numpy~=1.26.4
-opencv-python
+pyqt5~=5.15.11
+numpy~=2.0.2
 pandas~=2.2.3
-pillow~=10.4.0
-prettytable~=3.12.0
-pyqt5
-optuna~=4.1.0
-requests~=2.32.3
-scikit-image~=0.24.0
-scipy~=1.14.1
-segmentation-models-pytorch~=0.3.4
-stardist~=0.9.1
-torch~=2.4.1
-tqdm~=4.66.5
-wandb~=0.19.1
+pyyaml~=6.0.2
+napari~=0.5.6
+matplotlib~=3.10.0
+tqdm~=4.67.1
+torch~=2.5.1
+cellpose~=3.1.0
+cachetools~=5.3.3
+medpy~=0.5.2
+scipy~=1.15.1
+prettytable~=3.5.0
+optuna~=4.2.0
