--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-pyqt5~=5.15.11
-numpy~=2.2.2
-pandas~=2.2.3
-pyyaml~=6.0.2
-napari~=0.5.6
-matplotlib~=3.10.0
-tqdm~=4.67.1
-torch~=2.5.1
-cellpose~=3.1.0
-cachetools~=5.5.1
-medpy~=0.5.2
-scipy~=1.15.1
-prettytable~=3.13.0
-optuna~=4.2.0
+torch
+cellpose
+optuna
+numpy
+scipy
+napari[pyqt5]
+pandas
+matplotlib
+tqdm
+imageio-ffmpeg
