chore: update requirements with specific version constraints and add new dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-torch
-cellpose
-optuna
-numpy
-scipy
-napari[pyqt5]
-pandas
-matplotlib
-tqdm
+torch~=2.7.1
+cellpose~=4.0.5.dev23+g15eb3c6
+optuna~=4.4.0
+numpy~=2.2.6
+scipy~=1.15.3
+napari[pyqt5]~=0.6.1
+pandas~=2.2.3
+matplotlib~=3.10.0
+tqdm~=4.67.1
 imageio-ffmpeg
+scikit-image~=0.25.0
+pyyaml~=6.0.2
