--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cellpose-adapt"
-version = "0.1.0"
+version = "0.1.1"
 authors = [{ name = "Mario Koddenbrock", email = "mario.koddenbrock@htw-berlin.de" }]
 description = "Adaptation of Cellpose for specific use-cases."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "torch~=2.7.1",
-    "cellpose @ git+https://github.com/MouseLand/cellpose.git@main",
+    "cellpose~=4.0.6",
     "optuna~=4.4.0",
     "numpy~=2.2.6",
     "scipy~=1.15.3",
