chore: update requirements to remove version constraints for dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-torch~=2.7.1
--e git+https://github.com/MouseLand/cellpose.git@main#egg=cellpose
-optuna~=4.4.0
-numpy~=2.2.6
-scipy~=1.15.3
-napari[pyqt5]~=0.6.1
-pandas~=2.2.3
-matplotlib~=3.10.0
-tqdm~=4.67.1
+torch
+cellpose
+optuna
+numpy
+scipy
+napari[pyqt5]
+pandas
+matplotlib
+tqdm
 imageio-ffmpeg
-scikit-image~=0.25.0
-pyyaml~=6.0.2
-plotly~=6.1.2
+scikit-image
+pyyaml
+plotly
 scikit-learn
-pytest~=8.4.1
-tifffile~=2025.5.10
+pytest
+tifffile
